test/TestPhases/importchecking/invalid/importTwice.blc
import I1 "../imports/importMe"
import I2 "../imports/importMe"

@[EntryPoint]
activity Main () ()
    let foo: I1.S = {a = 1, b = 2.0}
    let bar: I2.S = {a = 2, b = 1.0}
    var x: I1.S
    run I1.accMultS(foo, bar)(x)
end